# smile

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  requirements.txt  setup.py  smile  smile.py  test_smile.py
src/: emoticons.rs  main.rs  settings.rs  settings_tests.rs  tests.rs  uinput.rs
