[package]
name = "smile"
version = "1.0.0"
edition = "2021"
authors = ["Smile Contributors"]
description = "A simple emoticon picker for Gnome/Linux"
license = "MIT"
repository = "https://github.com/uliruffler/smile"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
gdk = { version = "0.9", package = "gdk4" }
glib = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
lazy_static = "1.4"
arboard = "3.4"
enigo = "0.6"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
